# aeon-ai

./: .gitignore  CMakeLists.txt  README.md  setup.sh
include/: ai_quiz_generator.h  http_server.h
scripts/tests/: curl_examples.sh  debug_test.sh  simple_test.sh  test_personality.sh
src/: ai_quiz_generator.cpp  ai_quiz_generator.cpp.bak  http_server.cpp  main.cpp
